# RoguelikeFansBand-Rewrite

./: .env.example  .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
LICENSES/: README.md
assets/: provenance.json
crates/rfb-content/: Cargo.toml
crates/rfb-content/src/: lib.rs
crates/rfb-contract/: Cargo.toml
crates/rfb-contract/src/: approval.rs  lib.rs  main.rs  snapshot.rs
crates/rfb-contract/tests/: baseline_policy.rs  contract_fixtures.rs
crates/rfb-core/: Cargo.toml  build.rs
crates/rfb-core/src/: action.rs  check.rs  combat.rs  effect.rs  error.rs  event.rs  game.rs  lib.rs  resistance.rs  rng.rs  save.rs  scheduler.rs  state.rs  stats.rs
crates/rfb-legacy-import/: Cargo.toml
crates/rfb-legacy-import/src/: lib.rs  main.rs
crates/rfb-legacy-probe/: Cargo.toml
crates/rfb-legacy-probe/src/: main.rs
crates/rfb-localization/: Cargo.toml
crates/rfb-localization/src/: lib.rs
crates/rfb-protocol/: Cargo.toml
crates/rfb-protocol/src/: lib.rs
crates/rfb-replay/: Cargo.toml
crates/rfb-replay/src/: lib.rs
crates/rfb-save/: Cargo.toml
crates/rfb-save/src/: lib.rs
crates/rfb-wasm/: Cargo.toml
crates/rfb-wasm/src/: lib.rs
design/: android-target.md  baseline-update-policy.md  content-format-v1.md  contract-v10-bleeding-elemental-melee.md  contract-v11-structured-damage-events.md  contract-v12-weapon-attack-profile.md  contract-v13-monster-melee-routines.md  contract-v14-projectile-foundation.md  contract-v15-ammunition-throwing.md  contract-v16-target-selection.md  contract-v17-ammunition-recovery.md  contract-v18-thrown-attacks.md  contract-v19-inventory-capacity.md  contract-v2-content-migration.md  contract-v20-item-knowledge.md  contract-v21-consumable-use-action.md  contract-v22-instance-affix-knowledge.md  contract-v23-item-appraisal.md  contract-v24-deterministic-loot-generation.md  contract-v25-monster-carried-items.md  contract-v26-floor-lifecycle.md  contract-v27-procedural-room-content.md  contract-v28-door-terrain-state.md  contract-v29-locked-door-checks.md  contract-v3-inventory-migration.md  contract-v30-authoritative-terrain-interactions.md  contract-v31-secret-door-search.md  contract-v32-hidden-traps-disarm.md  contract-v33-diggable-terrain.md  contract-v34-multi-depth-floors.md  contract-v35-dungeon-expedition-lifecycle.md  contract-v36-one-shot-task-floor.md  contract-v37-task-objective-resolution.md  contract-v38-task-reward-journal.md  contract-v39-kill-objective-progress.md  contract-v4-equipment-migration.md  contract-v40-task-abandon-exit-policy.md  contract-v41-counted-kill-progress.md  contract-v42-retakeable-task.md  contract-v43-shared-task-id.md  (+50 more)
locales/en-US/: content.ftl  game.ftl  ui.ftl
locales/glossary/: style-guide.zh-CN.md  terms.zh-CN.yml
locales/zh-CN/: content.ftl  game.ftl  ui.ftl
packs/: README.md
packs/rfb-demo-original/: content.lock.json  pack.json
packs/rfb-demo-original/actors/: acid-seep.json  chorus-captain.json  echo-hound.json  ember-mote.json  explorer.json  frost-wisp.json  resonant-warden.json  spore-shepherd.json  storm-spark.json  venom-spore.json
packs/rfb-demo-original/affixes/: harmonic-edge.json
packs/rfb-demo-original/encounterTables/: echo-depths.json  resonance-descent.json  resonance-formations.json  resonance-gallery.json  resonance-grotto.json  resonance-pit.json
packs/rfb-demo-original/items/: echo-blade.json  echo-charm.json  luminous-shard.json  resonance-pellet.json  resonance-sling.json
packs/rfb-demo-original/lootTables/: echo-depth-1-room.json  ember-mote-carried.json  ember-mote.json  harmonic-sepulcher.json  resonance-gallery.json  resonance-grotto.json  resonant-warden.json
packs/rfb-demo-original/regionTables/: resonance-biomes.json
packs/rfb-demo-original/terrain/: archive-rift.json  bounty-annex-rift-abandoned.json  bounty-annex-rift-closed.json  bounty-annex-rift-failed.json  bounty-annex-rift.json  bounty-rift-abandoned.json  bounty-rift-closed.json  bounty-rift-failed.json  bounty-rift.json  chain-rift-abandoned.json  chain-rift-closed.json  chain-rift-failed.json  chain-rift.json  chain-vault-rift-abandoned.json  chain-vault-rift-closed.json  chain-vault-rift-failed.json  chain-vault-rift.json  door-broken.json  door-closed.json  door-locked.json  door-open.json  door-secret.json  echo-rubble.json  floor.json  hunt-rift-abandoned.json  hunt-rift-closed.json  hunt-rift-failed.json  hunt-rift.json  resonance-cavern.json  resonance-rift.json  resonance-ruin.json  resonance-vein.json  resonance-water-deep.json  resonance-water-shallow.json  resonant-floor.json  shaft-down.json  shaft-up.json  stairs-down.json  (+7 more)
schemas/: protocol-v1.schema.json  tileset-v1.schema.json
schemas/content-v1/: actor.schema.json  affix.schema.json  encounter-table.schema.json  item.schema.json  loot-table.schema.json  pack.schema.json  region-table.schema.json  terrain-feature-table.schema.json  terrain.schema.json  theme-table.schema.json  vault.schema.json  world.schema.json
scripts/: build-android.ps1
web/: index.html  package-lock.json  package.json  tsconfig.json
web/e2e/: tauri.e2e.mjs
web/src/: camera.test.ts  camera.ts  content-visuals.ts  core-client.ts  core-transport.ts  crash-diagnostics.ts  glyph-atlas.ts  localization-resources.ts  localization.test.ts  localization.ts  main.ts  map-renderer.ts  native-save-storage.ts  pixi-renderer-backend.ts  protocol.ts  render-chunks.test.ts  render-chunks.ts  render-color.test.ts  render-color.ts  render-profile-scenario.ts  render-profile.test.ts  render-profile.ts  render-world.test.ts  render-world.ts  renderer-backend.ts  styles.css  targeting.test.ts  targeting.ts  tauri-native-transport.ts  terrain-interaction.test.ts  terrain-interaction.ts  tileset-manifest.test.ts  tileset-manifest.ts  tileset-runtime.ts  worker-messages.ts
web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: crash_diagnostics.rs  lib.rs  main.rs  native_storage.rs
(+3767 files in other folders)
