[workspace]
members = [
    "crates/rfb-core",
    "crates/rfb-legacy-probe",
    "crates/rfb-protocol",
    "crates/rfb-save",
    "crates/rfb-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/UncleFvcker/RoguelikeFansBand-Rewrite"
rust-version = "1.96"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
wasm-bindgen = "0.2.105"

