[workspace]
members = [
    "crates/rfb-core",
    "crates/rfb-contract",
    "crates/rfb-content",
    "crates/rfb-legacy-probe",
    "crates/rfb-legacy-import",
    "crates/rfb-localization",
    "crates/rfb-protocol",
    "crates/rfb-replay",
    "crates/rfb-save",
    "web/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/UncleFvcker/RoguelikeFansBand-Rewrite"
rust-version = "1.96"

[workspace.dependencies]
fluent-bundle = "0.16.0"
rmp-serde = "1.3.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
ts-rs = "12.0.1"
unic-langid = "0.9.6"
