[package]
name = "rfb-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rfb-core = { path = "../rfb-core" }
rfb-protocol = { path = "../rfb-protocol" }
rfb-save = { path = "../rfb-save" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
