[package]
name = "rfb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rfb-protocol = { path = "../rfb-protocol" }
rmp-serde.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

