[package]
name = "rfb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
bindings = ["dep:schemars", "dep:serde_json", "dep:ts-rs"]

[dependencies]
rmp-serde.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
ts-rs = { workspace = true, optional = true }

[[bin]]
name = "generate-bindings"
path = "src/bin/generate-bindings.rs"
required-features = ["bindings"]
