[package]
name = "rfb-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rfb-core = { path = "../rfb-core" }
rfb-protocol = { path = "../rfb-protocol" }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
