[package]
name = "rfb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
rfb-core = { path = "../rfb-core" }
rfb-protocol = { path = "../rfb-protocol" }
rfb-save = { path = "../rfb-save" }
wasm-bindgen.workspace = true

